set(CORE_SOURCES
  ./debug.cpp
  ./audio/Buffer.cpp
  ./audio/Crossfader.cpp
  ./audio/CrossfadeTransport.cpp
  ./audio/GaplessTransport.cpp
  ./audio/Outputs.cpp
  ./audio/PlaybackService.cpp
  ./audio/Player.cpp
  ./audio/Stream.cpp
  ./audio/Streams.cpp
  ./audio/Visualizer.cpp
  ./db/Connection.cpp
  ./db/ScopedTransaction.cpp
  ./db/Statement.cpp
  ./io/DataStreamFactory.cpp
  ./io/LocalFileStream.cpp
  ./library/Indexer.cpp
  ./library/LibraryFactory.cpp
  ./library/LocalLibrary.cpp
  ./library/query/local/GetPlaylistQuery.cpp
  ./library/query/local/CategoryListQuery.cpp
  ./library/query/local/CategoryTrackListQuery.cpp
  ./library/query/local/DeletePlaylistQuery.cpp
  ./library/query/local/NowPlayingTrackListQuery.cpp
  ./library/query/local/SavePlaylistQuery.cpp
  ./library/query/local/SearchTrackListQuery.cpp
  ./library/track/IndexerTrack.cpp
  ./library/track/LibraryTrack.cpp
  ./library/track/Track.cpp
  ./library/track/TrackList.cpp
  ./library/track/RetainedTrack.cpp
  ./plugin/PluginFactory.cpp
  ./runtime/Message.cpp
  ./runtime/MessageQueue.cpp
  ./support/Common.cpp
  ./support/Preferences.cpp
  ./support/PreferenceKeys.cpp
  ../3rdparty/src/sqlite/sqlite3.c
  ../3rdparty/src/kiss_fft.c
  ../3rdparty/src/kiss_fftr.c
)

include_directories(
  .
  ..
  ../3rdparty/include
  ../3rdparty/include/md5
  ../3rdparty/include/sqlite
)

add_library(musikcore STATIC ${CORE_SOURCES})
target_link_libraries(musikcore ${musikbox_LINK_LIBS})
